--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "commander": "^2.15.1",
     "dotenv": "^5.0.1",
     "limiter": "^1.1.2",
+    "moment": "^2.22.0",
     "npm": "^5.8.0",
     "request": "^2.85.0",
+    "sanitize-filename": "^1.6.1",
     "sqlite3": "^4.0.0"
   },
   "devDependencies": {},
