added info template, updated db schema, added uploadTorrent logic

--- a/.env.dist
+++ b/.env.dist
@@ -2,3 +2,6 @@ BASE_URL=https://mangadex.org
 BASE_DIR=/path/to/storage
 SCRAPE_INTERVAL_SECONDS=500
 ANIDEX_APIKEY=
+ANIDEX_SUBCAT_ID=7
+ANIDEX_PRIVATE=1
+ANIDEX_DEBUG=0
