--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cheerio": "^1.0.0-rc.2",
     "commander": "^2.15.1",
     "dotenv": "^5.0.1",
+    "form-data": "^2.3.2",
     "limiter": "^1.1.2",
     "moment": "^2.22.0",
     "npm": "^5.8.0",
