--- a/.env.dist
+++ b/.env.dist
@@ -5,3 +5,7 @@ ANIDEX_APIKEY=
 ANIDEX_SUBCAT_ID=7
 ANIDEX_PRIVATE=1
 ANIDEX_DEBUG=0
+
+DISCORD_WEBHOOK_INFO=
+DISCORD_WEBHOOK_WARNING=
+DISCORD_WEBHOOK_ERROR=
