--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "npm": "^5.8.0",
     "request": "^2.85.0",
     "sanitize-filename": "^1.6.1",
-    "sqlite3": "^4.0.0"
+    "sqlite3": "^4.0.0",
+    "winston": "^2.4.1"
   },
   "devDependencies": {},
   "scripts": {
