--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "dotenv": "^5.0.1",
     "form-data": "^2.3.2",
     "limiter": "^1.1.2",
+    "mangadex-archive-torrent-processor": "git+https://github.com/Mangadex-Archive-Devs/mangadex-archive-torrent-processor.git",
+    "mangadex-req": "git+https://github.com/radonthetyrant/mangadex-req.git",
     "moment": "^2.22.0",
     "npm": "^5.8.0",
     "request": "^2.85.0",
     "sanitize-filename": "^1.6.1",
-    "sqlite3": "^4.0.0",
-    "winston": "^2.4.1"
+    "sqlite3": "^4.0.0"
   },
   "devDependencies": {},
   "scripts": {
