added request timeout envvar

--- a/.env.dist
+++ b/.env.dist
@@ -5,6 +5,7 @@ ANIDEX_APIKEY=
 ANIDEX_SUBCAT_ID=7
 ANIDEX_PRIVATE=1
 ANIDEX_DEBUG=0
+REQUEST_TIMEOUT=5
 
 DISCORD_WEBHOOK_INFO=
 DISCORD_WEBHOOK_WARNING=
