--- a/.env.dist
+++ b/.env.dist
@@ -5,8 +5,10 @@ ANIDEX_APIKEY=
 ANIDEX_SUBCAT_ID=7
 ANIDEX_PRIVATE=1
 ANIDEX_DEBUG=0
-REQUEST_TIMEOUT=5
+ANIDEX_HENTAI=0
+REQUEST_TIMEOUT=60
 
 DISCORD_WEBHOOK_INFO=
 DISCORD_WEBHOOK_WARNING=
 DISCORD_WEBHOOK_ERROR=
+DISCORD_WEBHOOK_ANNOUNCE=
